--- a/css/style.css
+++ b/css/style.css
@@ -69,13 +69,13 @@ body{
 .search-contacts{
     height: 45px;
     border: none;
-    background-color: var(--wrapper-grey);
+    background-color: #fafafa;
 }
 .search-contacts i{
     background-color: white;
     padding-top: 8px;
     padding-bottom: 8px;
-    border-right: 1px solid lightgrey;
+    border-right: 1px solid rgba(211, 211, 211, 0.527);
     color: var(--icon-grey);
 }
 
@@ -83,9 +83,14 @@ body{
 .container-contacts{
     height:calc(100vh - 225px);
     overflow: scroll;
+    background-color: white;
 }
 
 /* CARD CONTACT */
+.card{
+    border: transparent;
+    border-bottom: 1px solid lightgrey;
+}
 .container-profile-pic, .last-mex-hour{
     width: 20%;
 }
